[package]
name = "mccaption"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
keywords = ["mcc", "maccaptions", "captions"]
categories = ["parsing"]
description = "MacCaption ( MCC ) parser"
repository = "https://github.com/coral/mccaption"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0.49"
